fix Add Dataflow button not showing up

--- a/client-reactjs/src/index.css
+++ b/client-reactjs/src/index.css
@@ -333,6 +333,7 @@ path, .jtk-endpoint { cursor:pointer; }
   -o-transition: all 0.3s;
   transition: all 0.3s;
   position: relative;
+  height:450px;
 }
 
 #sidebar.active .btn.btn-primary:before {
